# nonebot_chat

./: .gitignore  CLAUDE.md  LICENSE  README.md  chat_config.yaml  install.py  install.sh  pyproject.toml
chat/: __init__.py  config.py  llm.py  matchers.py  personality.py  proactive.py
chat/memory/: __init__.py  distillation.py  persistence.py  store.py
chat/pipeline/: __init__.py  access.py  admin.py  debounce.py  dedup.py  dispatcher.py  formatter.py  ratelimit.py  sender.py  silent.py  sleep.py  trigger.py
tests/: conftest.py  test_access.py  test_admin.py  test_config.py  test_debounce.py  test_dedup.py  test_formatter.py  test_matchers.py  test_memory_store.py  test_persistence.py  test_ratelimit.py  test_sender.py  test_silent.py  test_sleep.py  test_trigger.py
