[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nonebot-chat"
version = "0.1.0"
description = "NoneBot2 智能聊天插件 — 人格驱动、记忆系统、主动回复"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Xiaji-yu", email = "variant305@gmail.com" }]
keywords = ["nonebot", "chatbot", "llm", "chat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: NoneBot2",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot>=2.0.0",
    "pydantic>=2.0",
    "aiohttp>=3.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.3",
]

[project.entry-points."nonebot.plugins"]
chat = "chat"

[project.urls]
Homepage = "https://github.com/Xiaji-yu/nonebot_chat"
Repository = "https://github.com/Xiaji-yu/nonebot_chat"

[tool.hatch.build.targets.wheel]
packages = ["chat"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
